Add book detail view, book detail URL, update server URL, override REST_FRAMEWORK settings with JSON API settings

--- a/client/app/styles/app.css
+++ b/client/app/styles/app.css
@@ -27,7 +27,7 @@
 }
 
 
-/* -- Home ----------------------------------- */
+/* -- General -------------------------------- */
 
 body {
   margin: 0;
