--- a/client/app/templates/books.hbs
+++ b/client/app/templates/books.hbs
@@ -1,7 +1,7 @@
 <div class="book-list">
   {{#each model as |book|}}
-    <div class="book">
+    {{#link-to 'book' book.id class="book"}}
       {{book.title}}
-    </div>
+    {{/link-to}}
   {{/each}}
 </div>
