Created create book route, controller, template; updated books route template, books api views

--- a/client/app/templates/books.hbs
+++ b/client/app/templates/books.hbs
@@ -5,3 +5,9 @@
     {{/link-to}}
   {{/each}}
 </div>
+
+<div class="actions">
+  {{#link-to 'create-book' tagName="button"}}
+    Add Book
+  {{/link-to}}
+</div>
