Update the book route template with delete actions and prompt, update the book route to reset properties on controller on load, delete action to persist deletion of book record

--- a/client/app/templates/book.hbs
+++ b/client/app/templates/book.hbs
@@ -9,3 +9,25 @@
     {{model.description}}
   </div>
 </div>
+
+<div class="actions {{if confirmingDelete 'u-justify-space-between'}}">
+
+  {{#if confirmingDelete}}
+
+    <div class="u-text-danger">
+      Are you sure you want to delete this book?
+    </div>
+
+    <div>
+      <button {{action 'delete' model}}>Delete</button>
+      <button {{action (mut confirmingDelete) false}}>Cancel</button>
+    </div>
+
+  {{else}}
+
+    <div>
+      <button {{action (mut confirmingDelete) true}}>Delete</button>
+    </div>
+
+  {{/if}}
+</div>
