--- a/client/app/templates/book.hbs
+++ b/client/app/templates/book.hbs
@@ -1,33 +1,71 @@
-<div class="book book--detail">
-  <div class="book-title">
-    {{model.title}}
-  </div>
-  <div class="book-author">
-    {{model.author}}
-  </div>
-  <div class="book-description">
-    {{model.description}}
-  </div>
-</div>
+{{#if isEditing}}
 
-<div class="actions {{if confirmingDelete 'u-justify-space-between'}}">
-
-  {{#if confirmingDelete}}
-
-    <div class="u-text-danger">
-      Are you sure you want to delete this book?
+  <form class="form">
+    <div class="header">
+      Edit
     </div>
 
+    {{input
+      value=form.title
+      placeholder="Title"
+      autocomplete='off'
+    }}
+
+    {{input
+      value=form.author
+      placeholder="Author"
+      autocomplete='off'
+    }}
+
+    {{textarea
+      value=form.description
+      placeholder="Description"
+      rows=10
+    }}
+  </form>
+
+  <div class="actions">
     <div>
-      <button {{action 'delete' model}}>Delete</button>
-      <button {{action (mut confirmingDelete) false}}>Cancel</button>
+      <button {{action 'update' model}}>Update</button>
+      <button {{action (mut isEditing) false}}>Cancel</button>
     </div>
+  </div>
 
-  {{else}}
+{{else}}
 
-    <div>
-      <button {{action (mut confirmingDelete) true}}>Delete</button>
+  <div class="book book--detail">
+    <div class="book-title">
+      {{model.title}}
     </div>
+    <div class="book-author">
+      {{model.author}}
+    </div>
+    <div class="book-description">
+      {{model.description}}
+    </div>
+  </div>
 
-  {{/if}}
-</div>
+  <div class="actions {{if confirmingDelete 'u-justify-space-between'}}">
+
+    {{#if confirmingDelete}}
+
+      <div class="u-text-danger">
+        Are you sure you want to delete this book?
+      </div>
+
+      <div>
+        <button {{action 'delete' model}}>Delete</button>
+        <button {{action (mut confirmingDelete) false}}>Cancel</button>
+      </div>
+
+    {{else}}
+
+      <div>
+        <button {{action (mut isEditing) true}}>Edit</button>
+        <button {{action (mut confirmingDelete) true}}>Delete</button>
+      </div>
+
+    {{/if}}
+  </div>
+
+{{/if}}
